bk_ida/gccida/c0/x86_field_alignment
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/x86_field_alignment/src/i386.c:13116:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_array_type->block.abstract_origin)) >> 1] != MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/x86_field_alignment/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/x86_field_alignment/src/i386.c:13117:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_array_type->block.abstract_origin)) >> 1] != MODE_COMPLEX_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/x86_field_alignment/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/x86_field_alignment/src/obj/i386.o] Error 1
